--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: doxygen
-          folder: html
+          folder: docs/html
           config_file: docs/Doxyfile.in
