--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 
-# MkExe
-project(MkExe LANGUAGES CXX)
-add_executable(MkExe
-	"MkExe/MkExe.cpp"
-	"MkExe/elf.h"
-)
+project(CKSDK_Tools)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+
+add_subdirectory("MkExe")
 
 # Dependency interface
-project(CKSDK_Tools)
 add_library(CKSDK_Tools INTERFACE)
 add_dependencies(CKSDK_Tools MkExe)
